session fix
